--- a/index.html
+++ b/index.html
@@ -47,9 +47,17 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Stefania Contu</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/StefaniaContu" target="_blank"
+            >Stefania Contu</a
+          >
+          and is
+          <a href="https://github.com/StefaniaContu/src" target="_blank">
+            on GitHub</a
+          >
+          and
+          <a href="https://jade-moonbeam-79f575.netlify.app/" target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
