Mistake in Netlify name - changed

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             on GitHub</a
           >
           and
-          <a href="https://jade-moonbeam-79f575.netlify.app/" target="_blank"
+          <a href="https://myproject1987.netlify.app/" target="_blank"
             >hosted on Netlify</a
           >
         </p>
